# plato-tiles

./: AGENT.md  Cargo.toml  DEPENDENCIES.md  README.md
memory/: JOURNAL.md
src/: lib.rs  main.rs
