[package]
name = "plato-tiles"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Typed tiles flowing through the PLATO signal chain"
repository = "https://github.com/SuperInstance/plato-tiles"

[dev-dependencies]
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
